// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogInForm component Snapshot LogInForm component false 1`] = `
<LogInForm
  handleClose={[Function]}
  show={false}
>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop="static"
    dialogAs={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    enforceFocus={true}
    keyboard={false}
    onHide={[Function]}
    restoreFocus={true}
    show={false}
  >
    <Modal
      autoFocus={true}
      backdrop="static"
      backdropTransition={[Function]}
      enforceFocus={true}
      keyboard={true}
      manager={
        BootstrapModalManager {
          "handleContainerOverflow": true,
          "isRTL": false,
          "modals": Array [],
          "ownerDocument": undefined,
        }
      }
      onEnter={[Function]}
      onEntering={[Function]}
      onEscapeKeyDown={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onHide={[Function]}
      renderBackdrop={[Function]}
      renderDialog={[Function]}
      restoreFocus={true}
      show={false}
      transition={[Function]}
    />
  </Modal>
</LogInForm>
`;

exports[`LogInForm component Snapshot LogInForm component true 1`] = `
<LogInForm
  handleClose={[Function]}
  show={true}
>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop="static"
    dialogAs={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    enforceFocus={true}
    keyboard={false}
    onHide={[Function]}
    restoreFocus={true}
    show={true}
  >
    <Modal
      autoFocus={true}
      backdrop="static"
      backdropTransition={[Function]}
      enforceFocus={true}
      keyboard={true}
      manager={
        BootstrapModalManager {
          "handleContainerOverflow": true,
          "isRTL": false,
          "modals": Array [],
          "ownerDocument": undefined,
        }
      }
      onEnter={[Function]}
      onEntering={[Function]}
      onEscapeKeyDown={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onHide={[Function]}
      renderBackdrop={[Function]}
      renderDialog={[Function]}
      restoreFocus={true}
      show={true}
      transition={[Function]}
    />
  </Modal>
</LogInForm>
`;
